objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Lead Qualification</fullName>
        <description>Lead Qualification</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Assignment_Date__c</fullName>
        <description>SFDC R6.0 By RS: Added new field as per the requirement 8036.</description>
        <label>Account Assignment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>D &amp; B Domestic Name</inlineHelpText>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Account Name)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <description>SFDC R3.0_Julalin_08/10/2012: New field is created as per the requirement #3241</description>
        <label>Marketing Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assigning_by_ISR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to store the Previous owner of the lead.</description>
        <label>Assigning ISR</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Authorized_Buyer__c</fullName>
        <description>Authorized Buyer</description>
        <label>Authorized Buyer</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <description>CR-0120-Julalin-Maintaining privacy setting with CID Person</description>
        <label>BU</label>
        <picklist>
            <picklistValues>
                <fullName>Apps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other HPSW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Srvcs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <description>Yes/No Option in case there is no Budget.</description>
        <label>Budget</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Function__c</fullName>
        <description>SFDC R2.0_Bala_16/07/2012: New field is created as per the requirement #
SFDC R2.0_Ramzil_23/07/2012:
Added picklist values as per the new data model</description>
        <label>Business Function</label>
        <picklist>
            <picklistValues>
                <fullName>Architecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architecture  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audit/Risk/Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Strategy/Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Strategy/Development  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Management  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service and Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service and Support  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education/Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education/Training  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environment Health and Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environment Health and Safety  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilities and Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilities and Maintenance  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance/Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance/Accounting  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Management  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Operations  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graphic Arts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graphic Arts  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT  </fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CID_Person_ID__c</fullName>
        <description>SFDC R2.0_Bala_16/07/2012: New field is created as per the requirement #</description>
        <label>CID Person ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_HP_Customer_Self_Reported1__c</fullName>
        <description>SFDC R2.0_Bala_16/07/2012: New field is created as per the requirement #</description>
        <label>HP Customer - Self Reported</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_Isolation_Status1__c</fullName>
        <description>SFDC R2.0_Bala_16/07/2012: New field is created as per the requirement #</description>
        <label>Isolation Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_Isolation_Status_Date1__c</fullName>
        <description>SFDC R2.0_Bala_16/07/2012: New field is created as per the requirement #</description>
        <label>Isolation Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>C_Lead_Source_Original__c</fullName>
        <description>SFDC R2.0_Bala_16/07/2012: New field is created as per the requirement #
SFDC R2.0_Ramzil_23/07/2012: 
Added picklist values as per the new data model</description>
        <label>Lead Source - Original</label>
        <picklist>
            <picklistValues>
                <fullName>HP.com - Lead Generation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP.com - Contact Me</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tradeshow/Live Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO - Natural Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEM - Paid Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party - Content Syndication/Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>C_Mobile_Opt_in1__c</fullName>
        <description>SFDC R2.0_Bala_16/07/2012: New field is created as per the requirement #
SFDC R2.0_Ramzil_26/07/2012: 
Added picklist values as per the new data model</description>
        <label>Mobile Opt In</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>C_Purchasing_Budget1__c</fullName>
        <description>Response Purchasing Budget - Most Recent
SFDC R2.0_Rahul_16/07/2012: New field is created as per the requirement #</description>
        <label>Response Purchasing Budget - Most Recent</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>C_Response_Summary_Most_Recent1__c</fullName>
        <description>Response Summary - Most Recent
SFDC R2.0_Rahul_16/07/2012: New field is created as per the requirement #</description>
        <label>Response Summary - Most Recent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_Suffix1__c</fullName>
        <description>Suffix ----&gt; SFDC R2.0_Julalin_16/07/2012: New field is created as per the requirement #</description>
        <label>Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_Timeframe_to_Buy1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Response Timeframe to buy - Most Recent
SFDC R2.0_Rahul_16/07/2012: New field is created as per the requirement #</description>
        <label>Response Timeframe to buy - Most Recent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC R2.0: New field is created as per the requirement #
Custom lookup on campaign</description>
        <label>Primary Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Capture_date_when_state_changes__c</fullName>
        <description>Capture date when state changes</description>
        <label>Capture date when state changes</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Capture_date_when_status_changes__c</fullName>
        <description>Capture date when status changes</description>
        <label>Capture date when status changes</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case_Safe_ID__c</fullName>
        <description>This field will display the 18-character case sensitive ID in application reports.</description>
        <formula>Id &amp; 
MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1) 
&amp; 
MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1) 
&amp; 
MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Reason__c</fullName>
        <description>Reason for Closed Status
[Updated the picklist values added for Release 2] 
LOV is the following IN THIS ORDER:


Unable to Contact
Competition
Inquiry Only
Insufficient Budget
Duplicate Lead/Opportunity
Poor Customer Fit
Poor Lead Quality 
Poor Solution Fit
Lead Expired
Created Contact</description>
        <label>Reason for Status</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Unable to Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inquiry Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insufficient Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate Lead/Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor Customer Fit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor Lead Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor Solution Fit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Created Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware no longer present</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP has upgraded the hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer has no interest</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Conv_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account lookup field should show only the accounts with record type &quot;Customer&quot;. This field is being used in code &amp; should not be added to page layout.</description>
        <label>Conv Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conv_Lead_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User lookup, used in code &amp; should not be added to page layout.</description>
        <label>Conv Lead Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ConvertedAccountID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC R2.0_Julalin_16/07/2012: New field is created as per the requirement #</description>
        <label>Converted Account ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Converted Account ID)</relationshipLabel>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ConvertedContactID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Object reference ID that points to the Contact into which the Lead has been converted.
SFDC R2.0_Julalin_16/07/2012: New field is created as per the requirement #</description>
        <label>Converted Contact ID</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ConvertedOpportunityId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Object reference ID that points to the Opportunity into which the Lead has been converted.
SFDC R2.0_Julalin_16/07/2012: New field is created as per the requirement #</description>
        <label>Converted Opportunity ID</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Converted_Date__c</fullName>
        <description>Date on which this Lead was converted.
SFDC R2.0_Bala_16/07/2012: New field is created as per the requirement #</description>
        <label>Converted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Converted_to_Contact__c</fullName>
        <formula>IsConverted &amp;&amp; ISBLANK(ConvertedOpportunityId) &amp;&amp; NOT(ISBLANK(ConvertedContactId))</formula>
        <label>Converted to Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Converted_to_Opportunity__c</fullName>
        <formula>IsConverted &amp;&amp; NOT( ISBLANK(ConvertedOpportunityId) )</formula>
        <label>Converted to Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_Calendar_Date_YYYY_MM_DD__c</fullName>
        <description>This field captures Created Calendar Date in YYYY MM DD format.</description>
        <formula>TEXT( YEAR( DATEVALUE(CreatedDate )) ) +&apos;/&apos;+ LPAD(TEXT( MONTH( DATEVALUE(CreatedDate) ) ) , 2 , &apos;0&apos;) +&apos;/&apos;+ LPAD(TEXT( DAY( DATEVALUE(CreatedDate) ) ), 2 , &apos;0&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Calendar Date YYYY MM DD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Calendar_Date__c</fullName>
        <description>It captures the created calendar date.
SFDC R2.0_Julalin_16/07/2012: New field is created as per the requirement #</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Calendar Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_Calendar_Year_Month__c</fullName>
        <description>This captures Created Calendar date in Year - Month format</description>
        <formula>Text(YEAR(DATEVALUE(CreatedDate)))+&apos;  &apos;+Text(MONTH(DATEVALUE(CreatedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Calendar Year Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Assignment__c</fullName>
        <description>It will capture the last transfer date</description>
        <formula>LastTransferDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Last Assignment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Lead_Acceptance__c</fullName>
        <description>The latest date of lead acceptance</description>
        <label>Date of Lead Acceptance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Since_Partner_Last_Modified__c</fullName>
        <formula>Now()- Last_Modified_by_Partner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Partner Last Modified</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Current_Lead_Status__c</fullName>
        <description>Will return the number of days in current lead status</description>
        <formula>TODAY()  -  Capture_date_when_status_changes__c</formula>
        <label>Days in Current Lead Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_current_lead_Acceptance__c</fullName>
        <formula>TODAY() - Capture_date_when_state_changes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in current lead Acceptance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Conversion__c</fullName>
        <description>Number of days the lead took to convert.</description>
        <formula>ConvertedDate -   DATEVALUE(CreatedDate)</formula>
        <label>Days to Conversion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department1__c</fullName>
        <description>SFDC R2.0_Bala_16/07/2012: New field is created as per the requirement #</description>
        <label>Department</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eloqua_Email__c</fullName>
        <description>CR-0120-Julalin-We need this field for Eloqua and Salesforce Integration when an Email is not supplied - It will be autogenerated as SFDC ID + &quot;@unknown.elq&quot;.</description>
        <label>Eloqua Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eloqua_Lead_Score__c</fullName>
        <description>Lead Score is calculated in Eloqua and the score gets auto populated in this field on SFDC</description>
        <label>Lead Score</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Opt_In_Change_Date1__c</fullName>
        <description>SFDC R2.0_Bala_16/07/2012: New field is created as per the requirement #
SFDC R2.0_Ramzil_23/07/2012: 
Added picklist values as per the new data model</description>
        <label>Email Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Opt_In__c</fullName>
        <description>SFDC R2.0_Julalin_16/07/2012: New field is created as per the requirement #
SFDC R2.0_Ramzil_26/07/2012: 
Added picklist values as per the new data model</description>
        <label>Email Opt In</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimated_Budget__c</fullName>
        <description>Value of Estimated Budget.  Multi Currency.</description>
        <inlineHelpText>Enter the amount of estimated budget if known</inlineHelpText>
        <label>Estimated Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Lead_Value_K__c</fullName>
        <description>Estimated value of lead.</description>
        <formula>Lead__c / 1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Lead Value $K</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Externally_Qualified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC R2.0_Bala_16/07/2012: New field is created as per the requirement #</description>
        <label>Externally Qualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fax_Opt_In__c</fullName>
        <description>SFDC R2.0_Julalin_16/07/2012: New field is created as per the requirement #
SFDC R2.0_Ramzil_26/07/2012: 
Added picklist values as per the new data model</description>
        <label>Fax Opt In</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fax_Opt_in_Change_Date__c</fullName>
        <description>SFDC R2.0_Bala_16/07/2012: New field is created as per the requirement #
SFDC R2.0_Ramzil_23/07/2012: 
Added picklist values as per the new data model</description>
        <label>Fax Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Assignment_Date__c</fullName>
        <description>SFDC R6.0 By RS: Added new field as per the requirement 8035.</description>
        <label>First Assignment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Name_Local__c</fullName>
        <description>First name in local language of user.</description>
        <label>First Name (Local)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name_Phonetic__c</fullName>
        <description>SFDC R2.0_Bala_16/07/2012: New field is created as per the requirement #</description>
        <label>First Name (Phonetic)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRM_ID__c</fullName>
        <description>SFDC R2.0_Bala_16/07/2012: New field is created as per the requirement #</description>
        <label>GRM ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <description>Geographical Location</description>
        <label>Geography</label>
        <picklist>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APJ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Industry_Vertical__c</fullName>
        <description>This is a formula that pulls SIC Description information from the Account Object onto the Lead Object.</description>
        <formula>Account_Name__r.SicDesc</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Industry Vertical</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsUnreadByOwner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, lead has been assigned, but not yet viewed. See Unread Leads for more information. Label is Unread By Owner.
SFDC R2.0_Julalin_16/07/2012: New field is created as per the requirement #</description>
        <label>IsUnreadByOwner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Function1__c</fullName>
        <description>SFDC R2.0_Bala_16/07/2012: New field is created as per the requirement #
SFDC R2.0_Ramzil_23/07/2012: 
Added picklist values as per the new data model
As per the requirement 3248 Field Label changes to &quot;Job Responsibilities&quot;
Changing picklist values as per R3 requirement</description>
        <label>Business Function</label>
        <picklist>
            <picklistValues>
                <fullName>Audit/Risk/Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Strategy/Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service and Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education/Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilities and Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance/Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graphic Arts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Architecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT CAD/CAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Data Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Database/Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Information Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Ops/Support/Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Software Develop/Mgmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Telecom/Networks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Web/Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics and Warehousing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing/Public Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>